--- a/style/base.scss
+++ b/style/base.scss
@@ -69,8 +69,6 @@ h2,
 h3 {
 	@include impact;
 
-	display: block;
-
 	margin-bottom: .2em;
 }
 
