--- a/style/page.scss
+++ b/style/page.scss
@@ -28,8 +28,6 @@ nav {
 
 		height: $navigation-height - $navigation-top-pad - $navigation-bottom-pad;
 
-		vertical-align: bottom;
-
 		fill: $light;
 
 		stroke: $light;
