--- a/style/wochenplan.scss
+++ b/style/wochenplan.scss
@@ -5,14 +5,6 @@
 		margin-top: 3rem;
 	}
 
-	h3 {
-		display: inline-block;
-
-		width: auto;
-
-		vertical-align: baseline;
-	}
-
 	.date {
 		margin-left: .8em;
 
